--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,10 +15,12 @@
       [class.collapse]="collapsed"
       (window:resize)="collapsed = true"
     >
+      <!--Switch between Views-->
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="switchView('recipes')">Recipes</a></li>
+        <li><a href="#" (click)="switchView('shopping')">Shopping List</a></li>
       </ul>
+      <!--Recipe Book Manager-->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" role="button"
