--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
     <form>
+      <!--Name of Ingredient input-->
       <div class="col-sm-5 form-group">
         <label for="name">Name</label>
-        <input type="text" id="name" class="form-control" />
+        <input type="text" id="name" class="form-control" #nameInput />
       </div>
+      <!--Amount of Ingredient input-->
       <div class="col-sm-2 form-group">
         <label for="amount">Amount</label>
-        <input type="number" id="amount" class="form-control" />
+        <input type="number" id="amount" class="form-control" #amountInput />
       </div>
       <div class="row">
         <div class="col-xs-12">
@@ -15,6 +17,7 @@
             class="btn btn-success"
             style="margin-right: 3px"
             type="submit"
+            (click)="onAddItem()"
           >
             Add
           </button>
