--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,11 @@
       </button>
 
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li>
+          <a (click)="onAddToShoppingList()" style="cursor: pointer"
+            >To Shopping List</a
+          >
+        </li>
         <li><a href="#">Edit Recipes</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -35,5 +39,11 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Ingredients</div>
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+        {{ ingredient.amount }} {{ ingredient.name }}
+      </li>
+    </ul>
+  </div>
 </div>
