--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
   <div class="row">
     <!--Only display the recipe or shopping list page based on what current display is set to-->
     <div class="col-md-12">
-      <app-recipes *ngIf="display === 'recipes'"></app-recipes>
-      <app-shopping-list *ngIf="display === 'shopping'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
