--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,19 +17,28 @@
     >
       <!--Switch between Views-->
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="switchView('recipes')">Recipes</a></li>
-        <li><a href="#" (click)="switchView('shopping')">Shopping List</a></li>
+        <li routerLinkActive="active">
+          <a style="cursor: pointer" routerLink="/recipes">Recipes</a>
+        </li>
+        <li routerLinkActive="active">
+          <a
+            style="cursor: pointer"
+            routerLink="/shopping-list"
+            routerLinkActive="active"
+            >Shopping List</a
+          >
+        </li>
       </ul>
       <!--Recipe Book Manager-->
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button"
+          <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >Manage
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer">Save Data</a></li>
+            <li><a style="cursor: pointer">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
