--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -27,8 +27,8 @@
             >To Shopping List</a
           >
         </li>
-        <li><a href="#">Edit Recipes</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a style="cursor: pointer">Edit Recipes</a></li>
+        <li><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
