--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,9 @@
     <div class="col-xs-12">
       <!--Displays the list of all recipe items-->
       <app-recipe-item
-        *ngFor="let recipeEl of recipes"
+        *ngFor="let recipeEl of recipes; index as id"
         [recipe]="recipeEl"
+        [id]="id"
       ></app-recipe-item>
     </div>
   </div>
