--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -4,7 +4,7 @@
     <hr />
     <ul class="list-group">
       <a
-        href="#"
+        style="cursor: pointer"
         class="list-group-item"
         style="cursor: pointer"
         *ngFor="let ingredient of ingredients"
