--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -27,7 +27,9 @@
             >To Shopping List</a
           >
         </li>
-        <li><a style="cursor: pointer">Edit Recipes</a></li>
+        <li>
+          <a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipes</a>
+        </li>
         <li><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
