--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (changeDisplay)="onChangeDisplay($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <!--Only display the recipe or shopping list page based on what current display is set to-->
