allow-selection-of-items-in-list: can now edit items in shopping list

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -42,7 +42,7 @@
             type="submit"
             [disabled]="!itemForm.valid"
           >
-            Add
+            {{ editMode ? "Update" : "Add" }}
           </button>
           <button
             class="btn btn-danger"
