add-additional-actions-to-shopping-list-form: added ability to delete item in shopping list

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -48,6 +48,8 @@
             class="btn btn-danger"
             style="margin-right: 3px"
             type="button"
+            *ngIf="editMode"
+            (click)="onDeleteItem()"
           >
             Delete
           </button>
