--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,72 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <!--Action Buttons-->
+      <div class="col-xs-12" style="margin-left: -15px; padding-bottom: 10px">
+        <button class="btn btn-success" style="margin-right: 5px" type="submit">
+          Save
+        </button>
+        <button class="btn btn-danger" type="button">Cancel</button>
+      </div>
+      <!--Name field-->
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" />
+          </div>
+        </div>
+      </div>
+      <!--Image Path field-->
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image Path</label>
+            <input type="text" id="imagePath" class="form-control" />
+          </div>
+        </div>
+      </div>
+      <!--Image Preview-->
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" class="img-response" />
+        </div>
+      </div>
+      <!--Description field-->
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea
+              type="text"
+              id="description"
+              class="form-control"
+              rows="6"
+            ></textarea>
+          </div>
+        </div>
+      </div>
+      <!--Ingredients list-->
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <div class="row">
+              <!--Name of Ingredient-->
+              <div class="col-xs-8">
+                <input type="text" class="form-control" />
+              </div>
+              <!--Amount of Ingredient-->
+              <div class="col-xs-2">
+                <input type="number" class="form-control" />
+              </div>
+              <!--Delete Ingredient Button-->
+              <div class="col-xs-2">
+                <button class="btn btn-danger" type="button">X</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
