--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <!--Action Buttons-->
       <div class="col-xs-12" style="margin-left: -15px; padding-bottom: 10px">
-        <button class="btn btn-success" style="margin-right: 5px" type="submit">
+        <button
+          class="btn btn-success"
+          style="margin-right: 5px"
+          type="submit"
+          [disabled]="!recipeForm.valid"
+        >
           Save
         </button>
         <button class="btn btn-danger" type="button">Cancel</button>
@@ -13,7 +18,12 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" id="name" class="form-control" />
+            <input
+              type="text"
+              id="name"
+              formControlName="name"
+              class="form-control"
+            />
           </div>
         </div>
       </div>
@@ -22,7 +32,12 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image Path</label>
-            <input type="text" id="imagePath" class="form-control" />
+            <input
+              type="text"
+              id="imagePath"
+              formControlName="imagePath"
+              class="form-control"
+            />
           </div>
         </div>
       </div>
@@ -40,6 +55,7 @@
             <textarea
               type="text"
               id="description"
+              formControlName="description"
               class="form-control"
               rows="6"
             ></textarea>
@@ -48,20 +64,45 @@
       </div>
       <!--Ingredients list-->
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12" formArrayName="ingredients">
           <div class="form-group">
-            <div class="row">
+            <div
+              class="row"
+              *ngFor="let ingredient of getIngredientControl(); let i = index"
+              [formGroupName]="i"
+              style="margin-top: 10px"
+            >
               <!--Name of Ingredient-->
               <div class="col-xs-8">
-                <input type="text" class="form-control" />
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="name"
+                />
               </div>
               <!--Amount of Ingredient-->
               <div class="col-xs-2">
-                <input type="number" class="form-control" />
+                <input
+                  type="number"
+                  class="form-control"
+                  formControlName="amount"
+                />
               </div>
               <!--Delete Ingredient Button-->
               <div class="col-xs-2">
                 <button class="btn btn-danger" type="button">X</button>
+              </div>
+            </div>
+            <hr />
+            <div class="row">
+              <div class="col-xs-12">
+                <button
+                  class="btn btn-success"
+                  type="button"
+                  (click)="onAddIngredient()"
+                >
+                  Add Ingredient
+                </button>
               </div>
             </div>
           </div>
