add-an-authentication-page: added an auth page and route

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,14 @@
         <li routerLinkActive="active">
           <a
             style="cursor: pointer"
+            routerLink="/auth"
+            routerLinkActive="active"
+            >Authenticate</a
+          >
+        </li>
+        <li routerLinkActive="active">
+          <a
+            style="cursor: pointer"
             routerLink="/shopping-list"
             routerLinkActive="active"
             >Shopping List</a
