add-an-authentication-page: created a submittable form on the authentication page

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,20 +1,46 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
     <!--Authentication form-->
-    <form>
+    <form [formGroup]="formData" (ngSubmit)="onSubmit()">
       <!--Email input-->
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" class="form-control" />
+        <input
+          type="email"
+          id="email"
+          formControlName="email"
+          class="form-control"
+        />
+        <span
+          *ngIf="!formData.get('email').valid && formData.get('email').touched"
+          class="help-block"
+          >Must enter valid email</span
+        >
       </div>
       <!--Password input-->
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" />
+        <input
+          type="password"
+          id="password"
+          formControlName="password"
+          class="form-control"
+        />
+        <span
+          *ngIf="
+            !formData.get('password').valid && formData.get('password').touched
+          "
+          class="help-block"
+          >Password must be at least 6 characters long</span
+        >
       </div>
       <!--Buttons-->
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">
+        <button
+          [disabled]="!formData.valid"
+          class="btn btn-primary"
+          type="submit"
+        >
           {{ isLoginMode ? "Login" : "Sign Up" }}
         </button>
         |
