--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,15 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <!--Error message alert-->
+    <div class="alert alert-danger" *ngIf="error">
+      <p>{{ error }}</p>
+    </div>
+    <!--Loading Bar-->
+    <div *ngIf="isLoading" style="text-align: center">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
     <!--Authentication form-->
-    <form [formGroup]="formData" (ngSubmit)="onSubmit()">
+    <form [formGroup]="formData" (ngSubmit)="onSubmit()" *ngIf="!isLoading">
       <!--Email input-->
       <div class="form-group">
         <label for="email">Email</label>
